Added Sound Manager Updated project to allow for Sound Manager

--- a/resources.cfg
+++ b/resources.cfg
@@ -3,26 +3,16 @@
 Zip=/usr/local/share/OGRE/Media/packs/SdkTrays.zip
 Zip=/usr/local/share/OGRE/Media/packs/profiler.zip
 FileSystem=/usr/local/share/OGRE/Media/thumbnails
-#
-FileSystem=../FE3D/data/material/programs
-FileSystem=../FE3D/data/material/scripts
-FileSystem=../FE3D/data/material/textures
-FileSystem=../FE3D/data/meshes
-FileSystem=../FE3D/data/watercraft/material/maps
-FileSystem=../FE3D/data/watercraft/material/scripts
-FileSystem=../FE3D/data/watercraft/material/textures
-FileSystem=../FE3D/data/watercraft/meshes
-FileSystem=../FE3D/data/watercraft/terrain
+
 # Common sample resources needed by many of the samples.
 # Rarely used resources should be separately loaded by the
 # samples which require them.
 [Popular]
 FileSystem=/usr/local/share/OGRE/Media/fonts
-FileSystem=/usr/local/share/OGRE/Media/PBR/
 FileSystem=/usr/local/share/OGRE/Media/materials/programs
 FileSystem=/usr/local/share/OGRE/Media/materials/programs/Cg
 FileSystem=/usr/local/share/OGRE/Media/materials/programs/GLSL
-#FileSystem=/usr/local/share/OGRE/Media/materials/programs/GLSL150
+FileSystem=/usr/local/share/OGRE/Media/materials/programs/GLSL150
 FileSystem=/usr/local/share/OGRE/Media/materials/programs/GLSL400
 FileSystem=/usr/local/share/OGRE/Media/materials/programs/HLSL
 FileSystem=/usr/local/share/OGRE/Media/materials/programs/HLSL_Cg
@@ -35,12 +25,13 @@ FileSystem=/usr/local/share/OGRE/Media/DeferredShadingMedia
 FileSystem=/usr/local/share/OGRE/Media/PCZAppMedia
 FileSystem=/usr/local/share/OGRE/Media/RTShaderLib
 FileSystem=/usr/local/share/OGRE/Media/RTShaderLib/GLSL
-#FileSystem=/usr/local/share/OGRE/Media/RTShaderLib/GLSL150
+FileSystem=/usr/local/share/OGRE/Media/RTShaderLib/GLSL150
 FileSystem=/usr/local/share/OGRE/Media/RTShaderLib/HLSL_Cg
 FileSystem=/usr/local/share/OGRE/Media/RTShaderLib/materials
 FileSystem=/usr/local/share/OGRE/Media/materials/scripts/SSAO
 FileSystem=/usr/local/share/OGRE/Media/materials/textures/SSAO
 FileSystem=/usr/local/share/OGRE/Media/volumeTerrain
+FileSystem=/usr/local/share/OGRE/Media/PBR
 Zip=/usr/local/share/OGRE/Media/packs/cubemap.zip
 Zip=/usr/local/share/OGRE/Media/packs/cubemapsJS.zip
 Zip=/usr/local/share/OGRE/Media/packs/dragon.zip
@@ -50,8 +41,13 @@ Zip=/usr/local/share/OGRE/Media/packs/ogredance.zip
 Zip=/usr/local/share/OGRE/Media/packs/Sinbad.zip
 Zip=/usr/local/share/OGRE/Media/packs/skybox.zip
 Zip=/usr/local/share/OGRE/Media/volumeTerrain/volumeTerrainBig.zip
-Zip=/usr/local/share/OGRE/Media/packs/SdkTrays.zip
 
+# Other Resources
+FileSystem=/home/philipsmith/eclipse-workspace/Assignment5/assets/meshes
+FileSystem=/home/philipsmith/eclipse-workspace/Assignment5/assets/material/programs
+FileSystem=/home/philipsmith/eclipse-workspace/Assignment5/assets/material/scripts
+FileSystem=/home/philipsmith/eclipse-workspace/Assignment5/assets/material/textures
+FileSystem=/home/philipsmith/eclipse-workspace/Assignment5/assets/sounds
 
 [General]
 FileSystem=/usr/local/share/OGRE/Media
