--- a/resources.cfg
+++ b/resources.cfg
@@ -48,6 +48,10 @@ FileSystem=/home/zachcooper/eclipse-workspace/BlastCommander_v0/assets/material/
 FileSystem=/home/zachcooper/eclipse-workspace/BlastCommander_v0/assets/material/scripts
 FileSystem=/home/zachcooper/eclipse-workspace/BlastCommander_v0/assets/material/textures
 FileSystem=/home/zachcooper/eclipse-workspace/BlastCommander_v0/assets/sounds
+FileSystem=/home/mmckissick/workspace/material/scripts
+FileSystem=/home/mmckissick/workspace/material/programs
+FileSystem=/home/mmckissick/workspace/material/textures
+FileSystem=/home/mmckissick/workspace/meshes
 
 [General]
 FileSystem=/usr/local/share/OGRE/Media
